--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* font-family: 'Poppins', sans-serif; */
-
 /* ----------------------------------------- */
 /* CSS Reset */
 /* ----------------------------------------- */
@@ -81,11 +79,10 @@ h4 {
 :root {
   /* Colors */
 
-  --bg-primary: hsl(30, 38%, 92%);
-  --bg-card: hsl(0, 0%, 100%);
-  --heading-blue: hsl(212, 21%, 14%);
-  --text-grey: hsl(228, 12%, 48%);
-  --text-green: hsl(158, 36%, 37%);
+  --bg-primary: hsl(229, 6%, 66%);
+  --bg-card: hsl(0, 0%, 98%);
+  --heading-blue: hsl(234, 12%, 34%);
+  --text-grey: hsl(229, 6%, 66%);
 
   /* Padding */
 
@@ -101,4 +98,28 @@ h4 {
   --mar-rl-1_5: 0 1.5rem;
   --mar-rl-2: 0 2rem;
   --mar-r-3-l-2_5: 0 3rem 0 2.5rem;
+}
+
+/* ----------------------------------------- */
+/* General Styles */
+/* ----------------------------------------- */
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--heading-blue);
+  background-color: var(--bg-card);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container {
+  width: min(90%);
+  margin-top: auto;
+}
+
+.footer {
+  margin-top: auto;
 }
