--- a/style.css
+++ b/style.css
@@ -120,6 +120,19 @@ body {
   margin-top: auto;
 }
 
+.heading-primary {
+  font-size: 1.5rem;
+  font-weight: 200;
+  text-align: center;
+}
+
+.heading-secondary {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: var(--mar-b-1);
+}
+
 .footer {
   margin-top: auto;
 }
