--- a/style.css
+++ b/style.css
@@ -84,20 +84,30 @@ h4 {
   --heading-blue: hsl(234, 12%, 34%);
   --text-grey: hsl(229, 6%, 66%);
 
+  --supervisor-color: #44d3d2;
+  --teamBuilder-color: #ea5454;
+  --karma-color: #fcae4a;
+  --calculator-color: #549ef2;
+
   /* Padding */
 
   --pad-tb-1: 1rem 0;
+  --pad-rl-1_75: 0 1.75rem;
+  --pad-b-1_75: 1.75rem;
 
   /* Margins */
+  --mar-t-1_5: 1.5rem;
   --mar-t-2: 2rem;
   --mar-t-5: 5rem;
   --mar-b-75: 0.75rem;
   --mar-b-1: 1rem;
   --mar-b-1_25: 1.25rem;
   --mar-b-1_5: 1.5rem;
+  --mar-b-1_75: 1.75rem;
   --mar-b-2: 2rem;
   --mar-b-5: 5rem;
   --mar-rl-1_5: 0 1.5rem;
+  --mar-rl-1_75: 0 1.75rem;
   --mar-rl-2: 0 2rem;
   --mar-r-3-l-2_5: 0 3rem 0 2.5rem;
 }
@@ -137,9 +147,50 @@ body {
 
 .about-text {
   text-align: center;
+  font-size: 0.9375rem;
   margin-bottom: var(--mar-b-5);
 }
 
+.feature-card {
+  box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
+  border-radius: 0.5rem;
+  margin-bottom: var(--mar-b-1_5);
+}
+
+.feature-card_heading {
+  font-size: 1.25rem;
+  font-weight: 600;
+  margin-top: var(--mar-t-1_5);
+  padding: var(--pad-rl-1_75);
+}
+
+.feature-card_text {
+  font-size: 0.8125rem;
+  margin-bottom: var(--mar-b-2);
+  padding: var(--pad-rl-1_75);
+}
+
+.feature-card_icon {
+  margin-left: auto;
+  margin-right: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
+.supervisor-card {
+  border-top: 3px solid var(--supervisor-color);
+}
+
+.teamBuilder-card {
+  border-top: 3px solid var(--teamBuilder-color);
+}
+
+.karma-card {
+  border-top: 3px solid var(--karma-color);
+}
+
+.calculator-card {
+  border-top: 3px solid var(--calculator-color);
+}
 .footer {
   margin-top: auto;
 }
