--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ h4 {
   --mar-t-1_5: 1.5rem;
   --mar-t-2: 2rem;
   --mar-t-5: 5rem;
+  --mar-b-0_5: 0.5rem;
   --mar-b-75: 0.75rem;
   --mar-b-1: 1rem;
   --mar-b-1_25: 1.25rem;
@@ -114,6 +115,7 @@ h4 {
 
 /* ----------------------------------------- */
 /* General Styles */
+
 /* ----------------------------------------- */
 
 body {
@@ -128,14 +130,33 @@ body {
 }
 
 .container {
-  width: min(80%);
+  width: min(80%, 29rem);
   margin-top: var(--mar-t-5);
+
+  @media (min-width: 68.75em) {
+    width: min(90rem);
+    /* max-width: 90rem; */
+  }
+}
+
+.flex-wrapper {
+  @media (min-width: 68.75em) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
 }
 
 .heading-primary {
   font-size: 1.5rem;
   font-weight: 200;
   text-align: center;
+
+  @media (min-width: 68.75em) {
+    font-size: 2.25rem;
+    margin-bottom: var(--mar-b-0_5);
+  }
 }
 
 .heading-secondary {
@@ -143,6 +164,10 @@ body {
   font-weight: 600;
   text-align: center;
   margin-bottom: var(--mar-b-1);
+
+  @media (min-width: 68.75em) {
+    font-size: 2.25rem;
+  }
 }
 
 .about-text {
@@ -155,6 +180,10 @@ body {
   box-shadow: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
   border-radius: 0.5rem;
   margin-bottom: var(--mar-b-1_5);
+
+  @media (min-width: 68.75em) {
+    width: 22rem;
+  }
 }
 
 .feature-card_heading {
